fixes small header size / fixes double border on index.html

--- a/resources/css/grid.css
+++ b/resources/css/grid.css
@@ -189,6 +189,9 @@ header {
     -o-transform:scale(1.25); /* Opera */
      transform:scale(1.25);
 }
+.bottom-article-container {
+    border-bottom: none;
+}
 
 /***************************/
 /*footer*/
@@ -283,11 +286,15 @@ footer {
     .banner-photo-container {
         display: none;
     }
+
 }
 
 /***************************/
 /***************************/
 @media only screen and (max-width: 600px) {
+    .fixed-header {
+        height: 60px;
+    }
     .col-half {
         width: 100%;
     }
